# bank2ynab

./: .codecov.yml  .gitignore  .prettierignore  Makefile  README.md  bun.lockb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: Bug_report.md  Feature_request.md
.github/workflows/: label.yml  testing.yml  update_readme.yml  versioning.yml
bank2ynab/: __main__.py  api_interface.py  bank_handler.py  config_handler.py  dataframe_handler.py  transactionfile_reader.py  user_input.py  ynab_api.py  ynab_api_response.py
bank2ynab/plugins/: OCBC_Bank_SG.py  handelsbanken.py  parse_from_memo.py  pdf_converter.py  plugin-template.py
bank2ynab/ynab/: client.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  index.md
src/bank2ynab/: __init__.py  __main__.py  api_interface.py  bank_handler.py  dataframe_handler.py  transactionfile_reader.py  user_input.py  ynab_api_response.py
src/bank2ynab/plugins/: handelsbanken.py  null.py  parse_from_memo.py
src/bank2ynab/ynab/: client.py
src/bank2ynab/ynab/models/: error.py
test/integration/: test_plugin_pdf_converter.py  utils.py
test/unit/: test_api_interface.py  test_bank_handler.py  test_dataframe_handler.py  test_user_input.py  test_ynab_api.py
typings/bank2ynab/: __main__.pyi  api_interface.pyi  bank_handler.pyi  config_handler.pyi  dataframe_handler.pyi  transactionfile_reader.pyi  user_input.pyi  ynab_api.pyi  ynab_api_response.pyi
typings/bank2ynab/plugins/: OCBC_Bank_SG.pyi  RaiffeisenRCM.pyi  handelsbanken.pyi  null.pyi  parse_from_memo.pyi  pdf_converter.pyi  plugin-template.pyi
typings/bank2ynab/ynab/: client.pyi
typings/bank2ynab/ynab/models/: error.pyi
utils/: build.sh  test.sh
