[tool.poetry]
name = "bank2ynab"
version = "0.1.0"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
chardet = "^4.0.0"
pandas = "^1.3.4"
pdfplumber = "^0.6.0"
mypy = "^1.3.0"

[tool.poetry.dev-dependencies]
black = ">=21.12b0"
flake8 = ">=4.0.1"
pydocstyle = ">=6.1.1"
isort = ">=5.10.1"
pyupgrade = ">=2.31.1"
bandit = ">=1.7.1"
jedi = "^0.18.1"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.30.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
line-length = 79
target-version = ['py38']

[tool.pylint]
disable = "C0103,C0114,C0115,C0116"
