[tool.poetry]
name = "bank2ynab"
version = "0.1.0"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.12"
requests = "^2.26.0"
chardet = "^4.0.0"
pandas = "^1.3.4"
pdfplumber = "^0.6.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
types-requests = "^2.30.0.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
pydocstyle = ">=6.1.1"
isort = "^5.12.0"
pyupgrade = ">=2.31.1"
bandit = "^1.7.5"
pyproject-flake8 = "^6.0.0.post1"
pydocstringformatter = "^0.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pylint]
disable = "C0103,C0114,C0115,C0116"
