[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "bank2ynab"
dynamic = ["version", "optional-dependencies"]
description = "Easily convert and import your bank's statements into YNAB."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = ["requests", "chardet", "pandas", "pdfplumber"]
maintainers = [
  { name = "Charis-Nicolas Georgiou", email = "charis@elegantsolutions.eu" },
  { name = "Torben G-B", email = "torben@g-b.dk" },
]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
dev = ["requirements-dev.txt"]

[[project.authors]]
name = "https://github.com/bank2ynab/bank2ynab/graphs/contributors"
email = "torben@g-b.dk"

[project.urls]
Homepage = "https://github.com/bank2ynab/bank2ynab"

[tool.hatch.version]
path = "bank2ynab/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/bank2ynab"]

[tool.hatch.envs.dev]
features = ["dev"]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
# Assume Python 3.8
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/bank2ynab:$MYPY_CONFIG_FILE_DIR/typings"
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = ["bank2ynab/plugins/*"]

[[tool.mypy.overrides]]
module = "bank2ynab.plugins.*"
ignore_errors = true
